# pendragon

./: .gitignore  job.yaml  pyproject.toml  recipe-schema.json  sandbox.py
frontend/: app.js  index.html  vite.config.js
frontend/src/: App.css  App.jsx  index.css
presets/: conentric_grid.yaml  fractal_glass.yaml  guilloche_center.yaml  guilloche_grid.yaml  spiral-grid.yaml  turbulence_in_crosshatch_lines.yaml  turbulence_in_vertical_lines.yaml  venation.yaml  wood_pattern.yaml
presets/ifs/: geometric_spirals.yaml  swirling_orbital_fractal.yaml
presets/new/: asymmetric_dreams.yaml  radial_ripple.yaml
src/pendragon/: __init__.py  __main__.py  cli.py  engine.py  export.py  gui.py  pen.py  runner.py  utils.py  worker.py
src/pendragon/api/: main.py
src/pendragon/core/: __init__.py  discovery.py  engine.py  mixins.py  models.py  registry.py  runner.py  schema.py
src/pendragon/engine/: __init__.py  core.py  discovery.py  mixins.py  models.py  registry.py  runner.py  schema.py  store.py
src/pendragon/gui/: __init__.py  controller.py  panels.py  utils.py  viewer.py  widgets.py  window.py  worker.py
src/pendragon/plugins/: __init__.py
src/pendragon/plugins/generators/: add_boundary.py  concentric.py  grid_lines.py  guilloche.py  offset_fill.py  spiral.py  venation.py  voronoi_dual.py
src/pendragon/plugins/modifications/: clip.py  connect_continuous.py  deduplicate.py  generate_in_cells.py  image_mask.py  merge.py  optimize.py  polygonize.py  scale.py  simplify.py
src/pendragon/presets/: voronoi_dual.yaml
src/pendragon/resources/: style.qss
(+59 files in other folders)
